--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dr-doc-search"
-version = "0.1.0"
+version = "0.6.0"
 description = "Search through a document using a chat interface"
 authors = [
     "namuan <github@deskriders.dev>",
@@ -59,7 +59,7 @@ pytest-cov = "^4.0.0"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-version = "0.6.0"
+version = "$tool.poetry.version"
 tag_format = "$version"
 version_files = [
     "pyproject.toml:version",
