--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ packages = [
 python = ">=3.9.0, <4.0"
 py-executable-checklist = "1.3.1"
 rich = "^13.0.0"
+pypdf = "^3.2.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
