--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [tool.poetry]
 name = "dr-doc-search"
-# This version is a placeholder autoupdated by poetry-dynamic-versioning
-version = "0.0.0"
+version = "0.9.0"
 description = "Search through a document using a chat interface"
 authors = [
     "namuan <github@deskriders.dev>",
@@ -58,16 +57,9 @@ tryceratops = "*"
 commitizen = "^2.20.3"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
-poetry-dynamic-versioning = "^0.21.3"
-
-[tool.poetry-dynamic-versioning]
-enable = true
-style = "pep440"
-vcs = "git"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
-annotated_tag = true
 version = "0.9.0"
 tag_format = "$version"
 version_files = [
@@ -110,8 +102,8 @@ check_untyped_defs = true
 show_error_codes = true
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 dr-doc-search = 'doc_search.app:main'
