--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ py-executable-checklist = "1.3.1"
 rich = "^13.0.0"
 pypdf = "^3.2.0"
 pytest = "^7.2.0"
+openai = "^0.25.0"
+langchain = "^0.0.57"
+faiss-cpu = "^1.7.3"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -86,7 +90,7 @@ addopts = """\
 """
 
 [tool.coverage.report]
-fail_under = 93
+fail_under = 70
 omit = ["src/doc_search/app.py", "src/doc_search/__init__.py"]
 exclude_lines = [
     'pragma: no cover'
