feat: #2 Provide option to just create a model for provided book

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ langchain = "^0.0.57"
 faiss-cpu = "^1.7.3"
 python-dotenv = "^0.21.0"
 panel = "^0.14.2"
+slug = "^2.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
