--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ commitizen = "^2.20.3"
 pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 coverage = "^7.0.3"
+mkdocstrings-python = "^0.8.3"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
