feat: #8 Allow user to specify a different LLM instead of OpenAI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ python-dotenv = "^0.21.0"
 panel = "^0.14.2"
 slug = "^2.0"
 sentence-transformers = "^2.2.2"
+transformers = "^4.26.0"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
